--- a/Spark_2_3_1/.classpath
+++ b/Spark_2_3_1/.classpath
@@ -250,5 +250,7 @@
 	<classpathentry kind="lib" path="/home/moglix/Desktop/Amit/spark-2.3.1-bin-hadoop2.7/jars/zjsonpatch-0.3.0.jar"/>
 	<classpathentry kind="lib" path="/home/moglix/Desktop/Amit/spark-2.3.1-bin-hadoop2.7/jars/zookeeper-3.4.6.jar"/>
 	<classpathentry kind="lib" path="/home/moglix/Desktop/Amit/spark-2.3.1-bin-hadoop2.7/jars/zstd-jni-1.3.2-2.jar"/>
+	<classpathentry kind="lib" path="/home/moglix/Desktop/Amit/spark-2.3.1-bin-hadoop2.7/jars/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="/home/moglix/Desktop/Amit/spark-2.3.1-bin-hadoop2.7/jars/com.mysql.jdbc_5.1.5.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
